Tests/Caravela.Framework.Tests.PublicPipeline/Tests/Aspects/InvalidCode/__InvalidTypeInCompileTimeMethod.t.cs
// CompileTimeAspectPipeline.TryExecute failed. 
// Error CS0246 on `X`: `The type or namespace name 'X' could not be found (are you missing a using directive or an assembly reference?)`

